Version 0.0.5c  Fixed Mana pool alignment

--- a/css/style.css
+++ b/css/style.css
@@ -161,7 +161,7 @@ body{
 }
 .player0manapools{
     position: fixed;
-    top: 15%;
+    top: 18.5%;
 }
 .manapool1{
     position: fixed;
